# telegram-chat-summarizer

./: .gitignore  README.md  app.py  communication.py  pyproject.toml  summarization.py
