[project]
name = "telegram-chat-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai==0.1.1",
    "langchain==0.1.13",
    "pydantic==2.6.4",
    "pytelegrambotapi==4.16.1",
    "ruff>=0.7.1",
    "schedule==1.2.1",
    "telethon==1.34.0",
]
